--- a/core/src/main/resources/fxml/asr_scene.fxml
+++ b/core/src/main/resources/fxml/asr_scene.fxml
@@ -5,9 +5,11 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<GridPane hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml" fx:controller="org.pasr.gui.controllers.ASRSceneController" alignment="CENTER">
+<GridPane hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
     <HBox alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="0">
         <Label>Sentence recognized:</Label>
         <TextArea fx:id="asrResult" editable="false"/>
+        <Label>Corrected sentence:</Label>_
+        <TextArea fx:id="asrCorrected" editable="false"/>
     </HBox>
 </GridPane>
