--- a/core/src/main/resources/fxml/main_scene.fxml
+++ b/core/src/main/resources/fxml/main_scene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.SplitPane?>
@@ -37,6 +38,8 @@
                         <Font name="Carlito" size="13.0"/>
                     </font>
                 </Button>
+                <Label fx:id="dictateButtonLabel" layoutX="207.0" layoutY="584.0"
+                       visible="false" textAlignment="CENTER" wrapText="true"/>
             </children>
         </AnchorPane>
     </items>
