--- a/core/src/main/resources/fxml/main_scene.fxml
+++ b/core/src/main/resources/fxml/main_scene.fxml
@@ -12,35 +12,35 @@
 <SplitPane dividerPositions="0.45" prefHeight="800.0" prefWidth="1280.0"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="org.pasr.gui.controllers.MainSceneController">
-    <items>
-        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="798.0"
-                   prefWidth="342.0">
-            <items>
-                <ListView fx:id="corpusList" prefHeight="200.0" prefWidth="200.0"/>
-                <ListView fx:id="acousticModelList" prefHeight="200.0" prefWidth="200.0"/>
-            </items>
-        </SplitPane>
-        <AnchorPane>
-            <children>
-                <TextField fx:id="emailAddress" layoutX="264.0" layoutY="157.0"
-                           promptText="E-mail address"/>
-                <PasswordField fx:id="password" layoutX="264.0" layoutY="183.0"
-                               promptText="Password"/>
-                <Button fx:id="newCorpusButton" layoutX="310.0" layoutY="238.0"
-                        mnemonicParsing="false" text="new coprus" textAlignment="CENTER">
-                    <font>
-                        <Font name="Carlito" size="13.0"/>
-                    </font>
-                </Button>
-                <Button fx:id="dictateButton" layoutX="322.0" layoutY="557.0"
-                        mnemonicParsing="false" text="dictate" textAlignment="CENTER">
-                    <font>
-                        <Font name="Carlito" size="13.0"/>
-                    </font>
-                </Button>
-                <Label fx:id="dictateButtonLabel" layoutX="207.0" layoutY="584.0"
-                       visible="false" textAlignment="CENTER" wrapText="true"/>
-            </children>
-        </AnchorPane>
-    </items>
+    <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="798.0"
+               prefWidth="342.0">
+        <items>
+            <ListView fx:id="corpusList" prefHeight="200.0" prefWidth="200.0"/>
+            <ListView fx:id="acousticModelList" prefHeight="200.0" prefWidth="200.0"/>
+        </items>
+    </SplitPane>
+    <AnchorPane>
+        <TextField fx:id="emailAddress" layoutX="264.0" layoutY="157.0"
+                   promptText="E-mail address"/>
+        <PasswordField fx:id="password" layoutX="264.0" layoutY="183.0"
+                       promptText="Password"/>
+        <Button fx:id="newCorpusButton" layoutX="310.0" layoutY="238.0"
+                mnemonicParsing="false" text="new coprus" textAlignment="CENTER"
+                onAction="#newCorpusButtonClicked">
+            <font>
+                <Font name="Carlito" size="13.0"/>
+            </font>
+        </Button>
+        <Label fx:id="newCorpusButtonLabel" layoutX="225.0" layoutY="279.0"
+               textAlignment="CENTER" visible="false" wrapText="true"/>
+        <Button fx:id="dictateButton" layoutX="322.0" layoutY="557.0"
+                mnemonicParsing="false" text="dictate" textAlignment="CENTER"
+                onAction="#dictateButtonClicked">
+            <font>
+                <Font name="Carlito" size="13.0"/>
+            </font>
+        </Button>
+        <Label fx:id="dictateButtonLabel" layoutX="207.0" layoutY="584.0"
+               textAlignment="CENTER" visible="false" wrapText="true"/>
+    </AnchorPane>
 </SplitPane>
