--- a/core/src/main/resources/fxml/email_list_scene.fxml
+++ b/core/src/main/resources/fxml/email_list_scene.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TreeView?>
-
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
-<VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
-    <TreeView fx:id="treeView"/>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-    <HBox alignment="CENTER">
-        <Button fx:id="submitButton" text="go" onAction="#submitButtonClicked"/>
-    </HBox>
-</VBox>
+<?import org.pasr.prep.email.EmailTree?>
+
+<SplitPane dividerPositions="0.3" prefHeight="800.0" prefWidth="1280.0"
+           xmlns:fx="http://javafx.com/fxml">
+    <EmailTree fx:id="emailTree" layoutX="97.0" layoutY="231.0" prefHeight="798.0"
+              prefWidth="379.0"/>
+    <SplitPane dividerPositions="0.5" layoutX="354.0" layoutY="152.0" orientation="VERTICAL"
+               prefHeight="798.0" prefWidth="891.0">
+        <TextArea editable="false" layoutX="196.0" layoutY="-45.0" prefHeight="155.0"
+                  prefWidth="889.0">
+            <font>
+                <Font name="Carlito" size="13.0"/>
+            </font>
+        </TextArea>
+        <AnchorPane>
+            <TextArea editable="false" prefHeight="633.0" prefWidth="889.0">
+                <font>
+                    <Font name="Carlito" size="13.0"/>
+                </font>
+            </TextArea>
+            <Button layoutX="815.0" layoutY="593.0" mnemonicParsing="false" prefHeight="30.0"
+                    prefWidth="60.0" text="done">
+                <font>
+                    <Font name="Carlito" size="13.0"/>
+                </font>
+            </Button>
+            <Button layoutX="753.0" layoutY="593.0" mnemonicParsing="false" prefHeight="30.0"
+                    prefWidth="60.0" text="back">
+                <font>
+                    <Font name="Carlito" size="13.0"/>
+                </font>
+            </Button>
+        </AnchorPane>
+    </SplitPane>
+</SplitPane>
