--- a/core/src/main/resources/fxml/email_list_scene.fxml
+++ b/core/src/main/resources/fxml/email_list_scene.fxml
@@ -6,41 +6,42 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import org.pasr.prep.email.EmailTree?>
+<?import org.pasr.gui.email.tree.EmailTree?>
 
 <SplitPane dividerPositions="0.3" prefHeight="800.0" prefWidth="1280.0"
            xmlns:fx="http://javafx.com/fxml">
     <EmailTree fx:id="emailTree" layoutX="97.0" layoutY="231.0" prefHeight="798.0"
-              prefWidth="379.0"/>
-    <SplitPane dividerPositions="0.5" layoutX="354.0" layoutY="152.0" orientation="VERTICAL"
+               prefWidth="379.0"/>
+    <SplitPane dividerPositions="0.2" layoutX="354.0" layoutY="152.0" orientation="VERTICAL"
                prefHeight="798.0" prefWidth="891.0">
         <AnchorPane>
-            <TextArea editable="false" layoutX="196.0" layoutY="-45.0" prefHeight="155.0"
-                      prefWidth="889.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TextArea fx:id="subjectTextArea" editable="false" layoutX="196.0" layoutY="-45.0"
+                      prefHeight="155.0" prefWidth="889.0" AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                      AnchorPane.topAnchor="0.0">
                 <font>
-                    <Font name="Carlito" size="13.0"/>
+                    <Font name="Carlito" size="15.0"/>
                 </font>
             </TextArea>
         </AnchorPane>
         <AnchorPane>
-            <TextArea editable="false" prefHeight="633.0" prefWidth="889.0"
+            <TextArea fx:id="bodyTextArea" editable="false" prefHeight="633.0" prefWidth="889.0"
                       AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <font>
-                    <Font name="Carlito" size="13.0"/>
+                    <Font name="Carlito" size="15.0"/>
                 </font>
             </TextArea>
-            <Button layoutX="815.0" layoutY="593.0" mnemonicParsing="false" prefHeight="30.0"
-                    prefWidth="60.0" text="done" AnchorPane.bottomAnchor="10.0"
-                    AnchorPane.rightAnchor="72.0">
+            <Button fx:id="backButton" layoutX="753.0" layoutY="593.0" mnemonicParsing="false"
+                    prefHeight="30.0" prefWidth="60.0" text="back" AnchorPane.bottomAnchor="20.0"
+                    AnchorPane.rightAnchor="82.0">
                 <font>
                     <Font name="Carlito" size="13.0"/>
                 </font>
             </Button>
-            <Button layoutX="753.0" layoutY="593.0" mnemonicParsing="false" prefHeight="30.0"
-                    prefWidth="60.0" text="back" AnchorPane.bottomAnchor="10.0"
-                    AnchorPane.rightAnchor="10.0">
+            <Button fx:id="doneButton" layoutX="815.0" layoutY="593.0" mnemonicParsing="false"
+                    prefHeight="30.0" prefWidth="60.0" text="done" AnchorPane.bottomAnchor="20.0"
+                    AnchorPane.rightAnchor="20.0">
                 <font>
                     <Font name="Carlito" size="13.0"/>
                 </font>
