--- a/core/src/main/resources/fxml/lda_scene.fxml
+++ b/core/src/main/resources/fxml/lda_scene.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -18,8 +18,9 @@
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <SplitPane dividerPositions="0.5" layoutX="190.0" layoutY="230.0" prefHeight="800.0"
-                   prefWidth="640.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
+        <SplitPane fx:id="wordsPane" disable="true" dividerPositions="0.5" layoutX="190.0"
+                   layoutY="230.0" prefHeight="800.0" prefWidth="640.0"
+                   AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
             <AnchorPane prefHeight="160.0" prefWidth="100.0">
                 <Label layoutX="126.0" layoutY="14.0" text="Words" textAlignment="CENTER">
@@ -60,21 +61,27 @@
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <AnchorPane fx:id="lDAPane" layoutX="10.0" layoutY="50.0" prefHeight="900.0"
+        <AnchorPane fx:id="lDAPane" disable="true" layoutX="10.0" layoutY="50.0" prefHeight="900.0"
                     prefWidth="660.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
                     AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
-            <TextField fx:id="iterationsTextField" layoutX="10.0" layoutY="46.0" prefHeight="30.0"
-                       prefWidth="180.0" promptText="iterations (default: 1000)"
-                       AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0"/>
-            <TextField fx:id="classesTextField" layoutX="10.0" layoutY="664.0" prefHeight="30.0"
-                       prefWidth="180.0" promptText="classes (default: 3)"
-                       AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="10.0"/>
+            <Label layoutX="22.0" layoutY="17.0" prefHeight="30.0" prefWidth="140.0"
+                   text="Number of iterations:" textAlignment="CENTER" AnchorPane.leftAnchor="0.0"
+                   AnchorPane.topAnchor="10.0"/>
+            <Spinner fx:id="iterationsSpinner" editable="false" layoutX="10.0" layoutY="46.0"
+                     prefHeight="30.0" prefWidth="180.0" AnchorPane.leftAnchor="150.0"
+                     AnchorPane.topAnchor="10.0"/>
             <Button fx:id="runAgainButton" layoutX="530.0" layoutY="10.0" mnemonicParsing="false"
                     prefHeight="30.0" prefWidth="80.0" text="run again"
                     AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+            <Label layoutX="43.0" layoutY="57.0" prefHeight="30.0" prefWidth="140.0"
+                   text="Number of classes:" AnchorPane.leftAnchor="0.0"
+                   AnchorPane.topAnchor="50.0"/>
+            <Spinner fx:id="classesSpinner" editable="false" layoutX="10.0" layoutY="664.0"
+                     prefHeight="30.0" prefWidth="180.0" AnchorPane.leftAnchor="150.0"
+                     AnchorPane.topAnchor="50.0"/>
             <TextArea fx:id="resultsTextArea" editable="false" prefHeight="800.0" prefWidth="640.0"
                       AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0"/>
+                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0"/>
             <Button fx:id="declineButton" layoutX="207.0" layoutY="663.0" mnemonicParsing="false"
                     prefHeight="30.0" prefWidth="90.0" text="decline" AnchorPane.bottomAnchor="10.0"
                     AnchorPane.leftAnchor="215.0"/>
