--- a/core/src/main/resources/fxml/lda_scene.fxml
+++ b/core/src/main/resources/fxml/lda_scene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
@@ -18,10 +19,10 @@
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <SplitPane fx:id="wordsPane" disable="true" dividerPositions="0.5" layoutX="190.0"
-                   layoutY="230.0" prefHeight="800.0" prefWidth="640.0"
-                   AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
-                   AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+        <SplitPane fx:id="wordsPane" dividerPositions="0.5" layoutX="190.0" layoutY="230.0"
+                   prefHeight="800.0" prefWidth="640.0" AnchorPane.bottomAnchor="50.0"
+                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                   AnchorPane.topAnchor="50.0">
             <AnchorPane prefHeight="160.0" prefWidth="100.0">
                 <Label layoutX="126.0" layoutY="14.0" text="Words" textAlignment="CENTER">
                     <font>
@@ -54,6 +55,14 @@
                         AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0"/>
             </AnchorPane>
         </SplitPane>
+        <AnchorPane fx:id="wordsProgressPane" layoutX="10.0" layoutY="760.0"
+                    AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0">
+            <Label prefHeight="30.0" prefWidth="340.0"
+                   text="Please wait while your e-mails are being processed"
+                   textAlignment="CENTER"/>
+            <ProgressBar fx:id="wordsProgressBar" layoutX="350.0" prefHeight="30.0"
+                         prefWidth="100.0" progress="0.0" AnchorPane.leftAnchor="350.0"/>
+        </AnchorPane>
     </AnchorPane>
     <AnchorPane prefHeight="800.0" prefWidth="640.0" HBox.hgrow="ALWAYS">
         <Label layoutX="241.0" layoutY="14.0" text="L.D.A. Results" textAlignment="CENTER">
@@ -61,7 +70,7 @@
                 <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <AnchorPane fx:id="lDAPane" disable="true" layoutX="10.0" layoutY="50.0" prefHeight="900.0"
+        <AnchorPane fx:id="lDAPane" layoutX="10.0" layoutY="50.0" prefHeight="900.0"
                     prefWidth="660.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
                     AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
             <Label layoutX="22.0" layoutY="17.0" prefHeight="30.0" prefWidth="140.0"
@@ -95,5 +104,14 @@
         <Button fx:id="doneButton" layoutX="564.0" layoutY="760.0" mnemonicParsing="false"
                 prefHeight="30.0" prefWidth="60.0" text="done" AnchorPane.bottomAnchor="10.0"
                 AnchorPane.rightAnchor="10.0"/>
+        <AnchorPane fx:id="lDAProgressPane" layoutX="32.0" layoutY="675.0" prefHeight="30.0"
+                    AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0">
+            <Label layoutX="94.0" layoutY="8.0" prefHeight="30.0" prefWidth="230.0"
+                   text="Please wait while L.D.A. is running" AnchorPane.bottomAnchor="0.0"
+                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                   AnchorPane.topAnchor="0.0"/>
+            <ProgressBar fx:id="lDAProgressBar" layoutX="116.0" layoutY="4.0" prefHeight="30.0"
+                         prefWidth="100.0" progress="0.0" AnchorPane.leftAnchor="240.0"/>
+        </AnchorPane>
     </AnchorPane>
 </HBox>
