--- a/core/src/main/resources/fxml/lda_scene.fxml
+++ b/core/src/main/resources/fxml/lda_scene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
@@ -11,8 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.91"
-      xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefHeight="800.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml">
     <AnchorPane prefHeight="800.0" prefWidth="640.0" HBox.hgrow="ALWAYS">
         <Label layoutX="228.0" layoutY="14.0" text="Unknown Words" textAlignment="CENTER">
             <font>
@@ -20,9 +20,9 @@
             </font>
         </Label>
         <SplitPane fx:id="wordsPane" dividerPositions="0.5" layoutX="190.0" layoutY="230.0"
-                   prefHeight="800.0" prefWidth="640.0" AnchorPane.bottomAnchor="50.0"
-                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
-                   AnchorPane.topAnchor="50.0">
+                   prefHeight="800.0" prefWidth="640.0" style="-fx-background-color: #D3D3D3;"
+                   AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
+                   AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
             <AnchorPane prefHeight="160.0" prefWidth="100.0">
                 <Label layoutX="126.0" layoutY="14.0" text="Words" textAlignment="CENTER">
                     <font>
@@ -71,29 +71,36 @@
             </font>
         </Label>
         <AnchorPane fx:id="lDAPane" layoutX="10.0" layoutY="50.0" prefHeight="900.0"
-                    prefWidth="660.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
+                    prefWidth="660.0" style="-fx-background-color: #D3D3D3;"
+                    AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
                     AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
             <Label layoutX="22.0" layoutY="17.0" prefHeight="30.0" prefWidth="140.0"
-                   text="Number of iterations:" textAlignment="CENTER" AnchorPane.leftAnchor="0.0"
+                   text="Number of iterations:" textAlignment="CENTER" AnchorPane.leftAnchor="10.0"
                    AnchorPane.topAnchor="10.0"/>
             <Spinner fx:id="iterationsSpinner" editable="false" layoutX="10.0" layoutY="46.0"
-                     prefHeight="30.0" prefWidth="180.0" AnchorPane.leftAnchor="150.0"
+                     prefHeight="30.0" prefWidth="150.0" AnchorPane.leftAnchor="160.0"
                      AnchorPane.topAnchor="10.0"/>
-            <Button fx:id="runAgainButton" layoutX="530.0" layoutY="10.0" mnemonicParsing="false"
-                    prefHeight="30.0" prefWidth="80.0" text="run again"
-                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+            <Label layoutX="388.0" layoutY="17.0" prefHeight="30.0" prefWidth="130.0"
+                   text="Number of threads:" AnchorPane.leftAnchor="320.0"
+                   AnchorPane.topAnchor="10.0"/>
+            <Spinner fx:id="threadsSpinner" editable="false" layoutX="445.0" layoutY="12.0"
+                     prefHeight="30.0" prefWidth="150.0" AnchorPane.rightAnchor="10.0"
+                     AnchorPane.topAnchor="10.0"/>
             <Label layoutX="43.0" layoutY="57.0" prefHeight="30.0" prefWidth="140.0"
-                   text="Number of classes:" AnchorPane.leftAnchor="0.0"
+                   text="Number of classes:" AnchorPane.leftAnchor="10.0"
                    AnchorPane.topAnchor="50.0"/>
             <Spinner fx:id="classesSpinner" editable="false" layoutX="10.0" layoutY="664.0"
-                     prefHeight="30.0" prefWidth="180.0" AnchorPane.leftAnchor="150.0"
+                     prefHeight="30.0" prefWidth="150.0" AnchorPane.leftAnchor="160.0"
                      AnchorPane.topAnchor="50.0"/>
+            <Button fx:id="runAgainButton" layoutX="530.0" layoutY="10.0" mnemonicParsing="false"
+                    prefHeight="30.0" prefWidth="80.0" text="run again"
+                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0"/>
             <TextArea fx:id="resultsTextArea" editable="false" prefHeight="800.0" prefWidth="640.0"
-                      AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0"/>
-            <Button fx:id="acceptButton" layoutX="337.0" layoutY="661.0" mnemonicParsing="false"
-                    prefHeight="30.0" prefWidth="90.0" text="accept" AnchorPane.bottomAnchor="10.0"
-                    AnchorPane.leftAnchor="265.0"/>
+                      AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
+                      AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="90.0"/>
+            <CheckBox fx:id="useLDACheckBox" layoutX="385.0" layoutY="666.0" mnemonicParsing="false"
+                      prefHeight="30.0" prefWidth="140.0" text="Use L.D.A. results"
+                      AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="240.0"/>
         </AnchorPane>
         <Button fx:id="backButton" layoutX="502.0" layoutY="760.0" mnemonicParsing="false"
                 prefHeight="30.0" prefWidth="60.0" text="back" AnchorPane.bottomAnchor="10.0"
