--- a/core/src/main/resources/fxml/lda_scene.fxml
+++ b/core/src/main/resources/fxml/lda_scene.fxml
@@ -87,9 +87,9 @@
                      prefHeight="30.0" prefWidth="150.0" AnchorPane.rightAnchor="10.0"
                      AnchorPane.topAnchor="10.0"/>
             <Label layoutX="43.0" layoutY="57.0" prefHeight="30.0" prefWidth="140.0"
-                   text="Number of classes:" AnchorPane.leftAnchor="10.0"
+                   text="Number of topics:" AnchorPane.leftAnchor="10.0"
                    AnchorPane.topAnchor="50.0"/>
-            <Spinner fx:id="classesSpinner" editable="false" layoutX="10.0" layoutY="664.0"
+            <Spinner fx:id="topicsSpinner" editable="false" layoutX="10.0" layoutY="664.0"
                      prefHeight="30.0" prefWidth="150.0" AnchorPane.leftAnchor="160.0"
                      AnchorPane.topAnchor="50.0"/>
             <Button fx:id="runAgainButton" layoutX="530.0" layoutY="10.0" mnemonicParsing="false"
