--- a/core/src/main/resources/fxml/console/view.fxml
+++ b/core/src/main/resources/fxml/console/view.fxml
@@ -5,6 +5,5 @@
 
 <AnchorPane prefHeight="200.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml">
     <TextArea fx:id="textArea" editable="false" AnchorPane.bottomAnchor="0.0"
-              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="0.0"/>
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
 </AnchorPane>
