--- a/core/src/main/resources/fxml/scene/main.fxml
+++ b/core/src/main/resources/fxml/scene/main.fxml
@@ -2,40 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+
+<?import org.pasr.gui.corpus.CorpusView?>
 
 <SplitPane dividerPositions="0.45" prefHeight="800.0" prefWidth="1280.0"
            xmlns:fx="http://javafx.com/fxml">
-    <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="798.0"
-               prefWidth="342.0">
-        <ListView fx:id="corpusList" prefHeight="200.0" prefWidth="200.0"/>
-        <ListView fx:id="acousticModelList" prefHeight="200.0" prefWidth="200.0"/>
-    </SplitPane>
+    <CorpusView fx:id="corpusView" orientation="VERTICAL" prefHeight="800.0" prefWidth="576.0"/>
     <AnchorPane>
-        <TextField fx:id="emailAddress" layoutX="264.0" layoutY="157.0"
-                   promptText="E-mail address"/>
-        <PasswordField fx:id="password" layoutX="264.0" layoutY="183.0"
-                       promptText="Password"/>
-        <Button fx:id="newCorpusButton" layoutX="310.0" layoutY="238.0"
-                mnemonicParsing="false" text="new coprus" textAlignment="CENTER">
-            <font>
-                <Font name="Carlito" size="13.0"/>
-            </font>
-        </Button>
-        <Label fx:id="newCorpusButtonLabel" layoutX="225.0" layoutY="279.0"
-               textAlignment="CENTER" visible="false" wrapText="true"/>
-        <Button fx:id="dictateButton" layoutX="322.0" layoutY="557.0"
-                mnemonicParsing="false" text="dictate" textAlignment="CENTER">
-            <font>
-                <Font name="Carlito" size="13.0"/>
-            </font>
-        </Button>
-        <Label fx:id="dictateButtonLabel" layoutX="207.0" layoutY="584.0"
-               textAlignment="CENTER" visible="false" wrapText="true"/>
+        <TextField fx:id="emailAddress" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
+                   promptText="E-mail address" AnchorPane.topAnchor="160.0"/>
+        <PasswordField fx:id="password" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
+                       promptText="Password" AnchorPane.topAnchor="200.0"/>
+        <Button fx:id="newCorpusButton" layoutX="290.0" prefHeight="30.0" prefWidth="100.0"
+                text="new corpus" AnchorPane.topAnchor="240.0"/>
+        <Button fx:id="dictateButton" layoutX="290.0" prefHeight="30.0" prefWidth="100.0"
+                text="dictate" AnchorPane.topAnchor="550.0"/>
+        <Label fx:id="dictateButtonLabel" alignment="CENTER" textAlignment="CENTER" visible="false"
+               prefHeight="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+               AnchorPane.topAnchor="590.0"/>
     </AnchorPane>
 </SplitPane>
