--- a/core/src/main/resources/fxml/scene/email_list.fxml
+++ b/core/src/main/resources/fxml/scene/email_list.fxml
@@ -8,17 +8,21 @@
 
 <?import org.pasr.gui.email.tree.EmailTree?>
 
+<?import javafx.scene.control.ProgressIndicator?>
 <SplitPane dividerPositions="0.3" prefHeight="800.0" prefWidth="1280.0"
            xmlns:fx="http://javafx.com/fxml">
-    <EmailTree fx:id="emailTree" layoutX="97.0" layoutY="231.0" prefHeight="798.0"
-               prefWidth="379.0"/>
-    <SplitPane dividerPositions="0.2" layoutX="354.0" layoutY="152.0" orientation="VERTICAL"
-               prefHeight="798.0" prefWidth="891.0">
+    <AnchorPane>
+        <EmailTree fx:id="emailTree" prefHeight="798.0" prefWidth="379.0"
+                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        <ProgressIndicator fx:id="progressIndicator" AnchorPane.bottomAnchor="20.0"
+                           AnchorPane.rightAnchor="20.0"/>
+    </AnchorPane>
+    <SplitPane dividerPositions="0.2" orientation="VERTICAL" prefHeight="798.0" prefWidth="891.0">
         <AnchorPane>
-            <TextArea fx:id="subjectTextArea" editable="false" layoutX="196.0" layoutY="-45.0"
-                      prefHeight="155.0" prefWidth="889.0" AnchorPane.bottomAnchor="0.0"
-                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                      AnchorPane.topAnchor="0.0">
+            <TextArea fx:id="subjectTextArea" editable="false" prefHeight="155.0" prefWidth="889.0"
+                      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <font>
                     <Font name="Carlito" size="15.0"/>
                 </font>
@@ -32,20 +36,10 @@
                     <Font name="Carlito" size="15.0"/>
                 </font>
             </TextArea>
-            <Button fx:id="backButton" layoutX="753.0" layoutY="593.0" mnemonicParsing="false"
-                    prefHeight="30.0" prefWidth="60.0" text="back" AnchorPane.bottomAnchor="20.0"
-                    AnchorPane.rightAnchor="82.0">
-                <font>
-                    <Font name="Carlito" size="13.0"/>
-                </font>
-            </Button>
-            <Button fx:id="doneButton" layoutX="815.0" layoutY="593.0" mnemonicParsing="false"
-                    prefHeight="30.0" prefWidth="60.0" text="done" AnchorPane.bottomAnchor="20.0"
-                    AnchorPane.rightAnchor="20.0">
-                <font>
-                    <Font name="Carlito" size="13.0"/>
-                </font>
-            </Button>
+            <Button fx:id="backButton" prefHeight="30.0" prefWidth="60.0" text="back"
+                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="90.0"/>
+            <Button fx:id="doneButton" prefHeight="30.0" prefWidth="60.0" text="done"
+                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0"/>
         </AnchorPane>
     </SplitPane>
 </SplitPane>
