--- a/core/src/main/resources/fxml/scene/main.fxml
+++ b/core/src/main/resources/fxml/scene/main.fxml
@@ -13,15 +13,15 @@
            xmlns:fx="http://javafx.com/fxml">
     <CorpusView fx:id="corpusView" orientation="VERTICAL" prefHeight="800.0" prefWidth="576.0"/>
     <AnchorPane>
-        <TextField fx:id="emailAddress" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
+        <TextField fx:id="emailAddressTextField" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
                    promptText="E-mail address" AnchorPane.topAnchor="160.0"/>
-        <PasswordField fx:id="password" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
+        <PasswordField fx:id="passwordField" layoutX="250.0" prefHeight="30.0" prefWidth="180.0"
                        promptText="Password" AnchorPane.topAnchor="200.0"/>
         <Button fx:id="newCorpusButton" layoutX="290.0" prefHeight="30.0" prefWidth="100.0"
                 text="new corpus" AnchorPane.topAnchor="240.0"/>
         <Button fx:id="dictateButton" layoutX="290.0" prefHeight="30.0" prefWidth="100.0"
                 text="dictate" AnchorPane.topAnchor="550.0"/>
-        <Label fx:id="dictateButtonLabel" alignment="CENTER" textAlignment="CENTER" visible="false"
+        <Label fx:id="dictateLabel" alignment="CENTER" textAlignment="CENTER" visible="false"
                prefHeight="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
                AnchorPane.topAnchor="590.0"/>
     </AnchorPane>
