--- a/core/src/main/resources/fxml/dialog/corpus_name.fxml
+++ b/core/src/main/resources/fxml/dialog/corpus_name.fxml
@@ -6,12 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="100.0" prefWidth="410.0" xmlns:fx="http://javafx.com/fxml">
-    <Label layoutX="32.0" layoutY="192.0" prefHeight="30.0" prefWidth="130.0"
-           text="New corpus name:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0"/>
-    <TextField fx:id="textField" layoutX="374.0" layoutY="187.0" prefHeight="30.0" prefWidth="100.0"
-               AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="10.0"
-               AnchorPane.topAnchor="10.0"/>
-    <Button fx:id="button" layoutX="276.0" layoutY="349.0" mnemonicParsing="false" prefHeight="30.0"
-            prefWidth="80.0" text="ok" AnchorPane.bottomAnchor="10.0"
-            AnchorPane.leftAnchor="165.0"/>
+    <Label prefHeight="30.0" prefWidth="130.0" text="New corpus name:" AnchorPane.leftAnchor="10.0"
+           AnchorPane.topAnchor="10.0"/>
+    <TextField fx:id="textField" prefHeight="30.0" prefWidth="100.0" AnchorPane.leftAnchor="150.0"
+               AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+    <Button fx:id="button" prefHeight="30.0" prefWidth="80.0" text="ok"
+            AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="165.0"/>
 </AnchorPane>
